# CequalXX

./: CMakeLists.txt  README.md  grammar.drawio  helper_functions.cpp  helper_functions.h  ideas.ceqpp  main.cpp  program.ceqpp  ~$grammar.drawio.bkp
Parser/: FunctionDefinitionNodeGenerator.cpp  FunctionDefinitionNodeGenerator.h  NodeGenerator.h  Parser.cpp  Parser.h
Parser/Nodes/: FunctionDefinitionNode.h  Node.h
Tokenizer/: ArrowToken.h  IdentifierToken.h  KeywordToken.h  LBraceToken.h  LParenToken.h  NumberToken.h  RBraceToken.h  RParenToken.h  SemicolonToken.h  StringLiteralToken.h  Token.h  TokenGenerator.h  Tokenizer.cpp  Tokenizer.h  Tokens.h
